fix: (FloatingPanel) position may be wrong on iOS Safari

--- a/src/components/floating-panel/floating-panel.less
+++ b/src/components/floating-panel/floating-panel.less
@@ -8,7 +8,7 @@
   background: var(--adm-color-white);
   position: fixed;
   z-index: var(--z-index);
-  top: 100vh;
+  bottom: 0;
   left: 0;
   width: 100vw;
   display: flex;
